# generic-array-derive

./: Cargo.toml  README.md
.github/workflows/: ci.yml  publish.yml
generic-bytes/: Cargo.toml
generic-bytes-derive/: Cargo.toml
generic-bytes-derive/src/: lib.rs
generic-bytes-derive/tests/: generic_associated_type.rs  generic_struct.rs  generic_struct_ordered.rs  generic_to_generic.rs  generic_tuple.rs  simple_struct.rs  simple_struct_try_from.rs  simple_tuple.rs  simple_tuple_try_from.rs
generic-bytes/src/: lib.rs
