# Copyright (c) Facebook, Inc. and its affiliates.
#
# This source code is licensed under the MIT license found in the
# LICENSE file in the root directory of this source tree.

[package]
name = "generic-bytes"
version = "0.1.0"
repository = "https://github.com/novifinancial/generic-array-derive"
keywords = ["bytes", "generic", "macro"]
description = "A derivable trait for conversion to and from an array of bytes with a type-level size"
authors = ["François Garillot <fga@fb.com>"]
license = "MIT"
edition = "2018"
readme = "../README.md"

[dependencies]
generic-array = "0.14.3"